supp submit version1

--- a/Q_BAI/notebooks/Q_UGapEc_20arms-new_env-group_two.ipynb
+++ b/Q_BAI/notebooks/Q_UGapEc_20arms-new_env-group_two.ipynb
@@ -72,7 +72,7 @@
     "\n",
     "\n",
     "tau = 0.8 # quantile level\n",
-    "est_flag = True # True: estimate the lower bound of hazard rate L; False: use the true L\n",
+    "est_L_flag = True # True: estimate the lower bound of hazard rate L; False: use the true L\n",
     "\n",
     "\n",
     "rewards_env, quantiles, Ls, means, samples = setup_env(environments, tau)"
@@ -84,11 +84,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle\n",
+    "# run experiments\n",
     "\n",
-    "#with open('group_two_samples_tau0.8_budget5000_exper100.pickle', 'rb') as handle:\n",
-    "#    fixed_samples_list = pickle.load(handle)\n",
-    "fixed_samples_list = None"
+    "def run_exper(rewards_env, summary_stats, policy, epsilon, m, budget_or_confi, num_exper, hyperpara_list, \n",
+    "              fixed_samples_list = None, est_H_flag = False, est_L_flag = None, fixed_L = None , tau = None):\n",
+    "    for key in rewards_env.keys():\n",
+    "        for hyperpara in hyperpara_list:\n",
+    "            name = key + '_' + str(num_exper) + '_' + str(budget_or_confi) \n",
+    "            policy_name = str(policy).split('.')[-1].split('\\'')[0] + '-'\n",
+    "            subname = policy_name + str(hyperpara) \n",
+    "            if est_H_flag:\n",
+    "                subname = 'Adp_' + subname\n",
+    "            print(name + subname)\n",
+    "            p = IntProgress(max = num_exper)\n",
+    "            p.description = 'Running'\n",
+    "            display(p)\n",
+    "            results[name][subname] = []\n",
+    "            est_Hs[name][subname] = []\n",
+    "            if est_H_flag:\n",
+    "                result, est_H_list = simulate(rewards_env[key],summary_stats[key], policy, \n",
+    "                        epsilon, m, budget_or_confi, num_exper, hyperpara, p, fixed_samples_list,\n",
+    "                        est_H_flag, est_L_flag, fixed_L, tau)\n",
+    "                est_Hs[name][subname].append(est_H_list)\n",
+    "            else:\n",
+    "                result = simulate(rewards_env[key],summary_stats[key], policy, \n",
+    "                        epsilon, m, budget_or_confi, num_exper, hyperpara, p, fixed_samples_list,\n",
+    "                        est_H_flag, est_L_flag, fixed_L, tau)\n",
+    "            results[name][subname].append(result)"
    ]
   },
   {
@@ -97,103 +119,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# run experiments\n",
-    "\n",
-    "def run_exper(rewards_env, hyperpara_list, num_arms, num_exper, budget_or_confi, epsilon, tau, policy, summary_stats, est_flags = [est_flag], fixed_samples_list = None):\n",
-    "    for key in rewards_env.keys():\n",
-    "        for hyperpara in hyperpara_list:\n",
-    "            for est_flag in est_flags:\n",
-    "                name = key + '_' + str(num_exper) + '_' + str(budget_or_confi) \n",
-    "                policy_name = str(policy).split('.')[-1].split('\\'')[0] + '-'\n",
-    "                subname = policy_name + str(hyperpara) \n",
-    "                print(name + subname)\n",
-    "                p = IntProgress(max = num_exper)\n",
-    "                p.description = 'Running'\n",
-    "                display(p)\n",
-    "                results[name][subname] = []\n",
-    "                for m in [2]:\n",
-    "                    #print('m: ', m)\n",
-    "                    results[name][subname].append(simulate(rewards_env[key],summary_stats[key], policy, \n",
-    "                                                 epsilon, tau, m, budget_or_confi, num_exper, est_flag, hyperpara, None,  p, fixed_samples_list))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def run_exper_mean(rewards_env, hyperpara_list, num_arms, num_exper, budget_or_confi, epsilon, policy, summary_stats, fixed_samples_list = None):\n",
-    "    for key in rewards_env.keys():\n",
-    "        for hyperpara in hyperpara_list:\n",
-    "            name = key + '_' + str(num_exper) + '_' + str(budget_or_confi) \n",
-    "            policy_name = str(policy).split('.')[-1].split('\\'')[0] + '-'\n",
-    "            subname = policy_name + str(hyperpara) \n",
-    "            print(name + subname)\n",
-    "            p = IntProgress(max = num_exper)\n",
-    "            p.description = 'Running'\n",
-    "            display(p)\n",
-    "            results[name][subname] = []\n",
-    "            for m in [2]:\n",
-    "                #print('m: ', m)\n",
-    "                results[name][subname].append(simulate_mean(rewards_env[key],summary_stats[key], policy, \n",
-    "                                             epsilon, m, budget_or_confi, num_exper, hyperpara, p, fixed_samples_list))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def run_exper_mean(rewards_env, hyperpara_list, num_arms, num_exper, budget_or_confi, epsilon, policy, summary_stats, fixed_samples_list = None):\n",
-    "    for key in rewards_env.keys():\n",
-    "        for hyperpara in hyperpara_list:\n",
-    "            name = key + '_' + str(num_exper) + '_' + str(budget_or_confi) \n",
-    "            policy_name = str(policy).split('.')[-1].split('\\'')[0] + '-'\n",
-    "            subname = policy_name + str(hyperpara) \n",
-    "            print(name + subname)\n",
-    "            p = IntProgress(max = num_exper)\n",
-    "            p.description = 'Running'\n",
-    "            display(p)\n",
-    "            results[name][subname] = []\n",
-    "            for m in [2]:\n",
-    "                #print('m: ', m)\n",
-    "                results[name][subname].append(simulate_mean(rewards_env[key],summary_stats[key], policy, \n",
-    "                                             epsilon, m, budget_or_confi, num_exper, hyperpara, p, fixed_samples_list))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# setting\n",
     "\n",
     "results = defaultdict(dict)\n",
+    "est_Hs = defaultdict(dict)\n",
+    "\n",
     "num_arms = 20\n",
     "num_exper = 10\n",
-    "confi = 0.2\n",
-    "epsilon = 0.05\n"
+    "confi = 0.1\n",
+    "epsilon = 0.05\n",
+    "m = 2\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mixture_AbsGau_[[0, 1.5, 0, 1, 1], [3.5, 2, 0, 1, 1], [0, 1.5, 0, 1, 1], [3.5, 2, 0, 1, 1], [0, 1.5, 0, 1, 1], [3.5, 2, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1]]Exp_[[0.25], [0.25]]_10_0.2Q_UGapEc-[0.001, 1]\n"
+      "Mixture_AbsGau_[[0, 1.5, 0, 1, 1], [3.5, 2, 0, 1, 1], [0, 1.5, 0, 1, 1], [3.5, 2, 0, 1, 1], [0, 1.5, 0, 1, 1], [3.5, 2, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1]]Exp_[[0.25], [0.25]]_10_0.1Q_UGapEc-[0.0002, 1]\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "af1781a22d7840aca35d8da79b438be2",
+       "model_id": "a50972f3dcd94b3594fc52af504b0232",
        "version_major": 2,
        "version_minor": 0
       },
@@ -205,25 +160,33 @@
      "output_type": "display_data"
     },
     {
-     "ename": "TypeError",
-     "evalue": "'float' object cannot be interpreted as an integer",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-e8d633e1f5eb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# hyperpara_list = [[0.0001, 1], [0.0005, 1]]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mhyperpara_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0.001\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0.005\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mrun_exper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrewards_env\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhyperpara_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_arms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_exper\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconfi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepsilon\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtau\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mQ_UGapEc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mquantiles\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfixed_samples_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfixed_samples_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-4-1e081395ce95>\u001b[0m in \u001b[0;36mrun_exper\u001b[0;34m(rewards_env, hyperpara_list, num_arms, num_exper, budget_or_confi, epsilon, tau, policy, summary_stats, est_flags, fixed_samples_list)\u001b[0m\n\u001b[1;32m     16\u001b[0m                     \u001b[0;31m#print('m: ', m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m                     results[name][subname].append(simulate(rewards_env[key],summary_stats[key], policy, \n\u001b[0;32m---> 18\u001b[0;31m                                                  epsilon, tau, m, budget_or_confi, num_exper, est_flag, hyperpara, None,  p, fixed_samples_list))\n\u001b[0m",
-      "\u001b[0;32m~/git/eheye/Q_BAI/codes/SimulatedGames.py\u001b[0m in \u001b[0;36msimulate\u001b[0;34m(env, summary_stat, policy, epsilon, m, budget_or_confi, num_expers, hyperpara, p, fixed_samples_list, est_H_flag, est_L_flag, fixed_L, tau)\u001b[0m\n\u001b[1;32m     56\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     57\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 58\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum_expers\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     59\u001b[0m         \u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     60\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mfixed_samples_list\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'float' object cannot be interpreted as an integer"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mixture_AbsGau_[[0, 1.5, 0, 1, 1], [3.5, 2, 0, 1, 1], [0, 1.5, 0, 1, 1], [3.5, 2, 0, 1, 1], [0, 1.5, 0, 1, 1], [3.5, 2, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1], [0, 1.5, 0, 1, 1]]Exp_[[0.25], [0.25]]_10_0.1Q_UGapEc-[0.0005, 1]\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "957466d2f31e4cfa819a69f763eca896",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "IntProgress(value=0, description='Running', max=10)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "# hyperpara_list = [[0.0001, 1], [0.0005, 1]]\n",
-    "hyperpara_list = [[0.001, 1], [0.005, 1]]\n",
-    "run_exper(rewards_env, hyperpara_list, num_arms, num_exper, confi, epsilon, tau, Q_UGapEc, quantiles, fixed_samples_list = fixed_samples_list)\n",
+    "hyperpara_list = [[0.0002, 1], [0.0005, 1]]\n",
+    "# hyperpara_list = [[0.001, 1], [0.005, 1]]\n",
     "\n",
-    "\n",
+    "run_exper(rewards_env, quantiles, Q_UGapEc, epsilon, m, confi, num_exper, hyperpara_list, \n",
+    "            est_H_flag = False, est_L_flag = est_L_flag, tau = tau)\n",
     "# run_exper(rewards_env, hyperpara_list, num_arms, num_exper, budget, epsilon, tau, uniform_sampling, quantiles)"
    ]
   },
@@ -233,8 +196,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hyperpara_list = [[0.5, 1], [1,1]]\n",
-    "run_exper_mean(rewards_env, hyperpara_list, num_arms, num_exper, confi, epsilon, UGapEc, means, fixed_samples_list = fixed_samples_list)"
+    "hyperpara_list = [ [0.2,1], [0.5, 1]]\n",
+    "run_exper(rewards_env, quantiles, UGapEc, epsilon, m, confi, num_exper, hyperpara_list, \n",
+    "            est_H_flag = False, est_L_flag = est_L_flag)"
    ]
   },
   {
@@ -243,7 +207,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_eva(results, 'sc', paper_flag = False)"
+    "plot_eva(results, 'sc', paper_flag = False, save_flag=False, log_scale=True)"
    ]
   },
   {
