histogram changed to power to 2 scale

--- a/QuantEst/sgd_est_experiment/Experiment_SGD_frugal.ipynb
+++ b/QuantEst/sgd_est_experiment/Experiment_SGD_frugal.ipynb
@@ -66,96 +66,66 @@
     "def get_normalized_e(true, batches, est):\n",
     "    upper = est - batches\n",
     "    bottom = true - batches\n",
-    "    return (upper/bottom)"
+    "    if 0 in bottom: \n",
+    "        bottom = np.array([i if i !=0 else 0.00000001 for i in bottom])\n",
+    "        print (bottom)\n",
+    "    return (upper/bottom)\n",
+    "\n",
+    "# true = np.array([0,0,0,1,0])\n",
+    "# batches = np.ones(5)\n",
+    "# est = np.array([1,2,3,4,5])\n",
+    "# get_normalized_e(true, batches, est)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "get_q_ests using method_name SGD\n",
-      "get_q_ests using method_name Frugal\n",
-      "get_q_ests using method_name Frugal\n",
-      "get_q_ests using method_name Frugal\n",
-      "get_q_ests using method_name Frugal\n",
-      "get_q_ests using method_name Frugal\n",
-      "get_q_ests using method_name Frugal\n",
-      "get_q_ests using method_name Frugal\n",
-      "get_q_ests using method_name Frugal\n",
-      "get_q_ests using method_name Frugal\n",
-      "get_q_ests using method_name Frugal\n",
-      "get_q_ests using method_name Frugal\n",
-      "get_q_ests using method_name Frugal\n",
-      "get_q_ests using method_name Frugal\n",
-      "get_q_ests using method_name Frugal\n",
-      "get_q_ests using method_name Frugal\n",
-      "get_q_ests using method_name Frugal\n",
-      "get_q_ests using method_name Frugal\n",
-      "get_q_ests using method_name Frugal\n",
-      "get_q_ests using method_name Frugal\n",
-      "get_q_ests using method_name Frugal\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "distro = 'gau_1'\n",
-    "datasize = 1000\n",
-    "tau_lst = tau_vals\n",
+    "# distros = ['mix', 'gau_1', 'exp']\n",
+    "# # distros = ['mix']\n",
+    "# for distro in distros:\n",
+    "#     datasize = 1000\n",
+    "#     tau_lst = tau_vals\n",
     "\n",
-    "dataset = get_dataset(distro, datasize, False)\n",
+    "#     dataset = get_dataset(distro, datasize, False)\n",
     "\n",
-    "q_true = get_q_true(distro, tau_vals)\n",
-    "q_batches = get_q_batches(dataset, tau_vals)\n",
-    "sgd_est_res, sgd_res_proc = get_q_ests(dataset, tau_vals, \"SGD\", 'const')\n",
+    "#     q_true = get_q_true(distro, tau_vals)\n",
+    "#     q_batches = get_q_batches(dataset, tau_vals)\n",
+    "#     sgd_est_res, sgd_res_proc = get_q_ests(dataset, tau_vals, \"SGD\", 'const')\n",
     "\n",
-    "N_frugal = 20\n",
-    "frugal_res = np.zeros((N_frugal, len(tau_lst)))\n",
-    "frugal_proc = np.zeros((N_frugal, len(tau_lst), datasize))\n",
-    "for i in range(N_frugal):\n",
-    "    frugal_res[i], frugal_proc[i] = get_q_ests(dataset, tau_vals, \"Frugal\", None)\n",
-    "q_est_res, q_est_proc = frugal_res, frugal_proc\n",
-    "E = get_normalized_e(q_true, sgd_est_res, q_est_res)"
+    "#     N_frugal = 200\n",
+    "#     frugal_res = np.zeros((N_frugal, len(tau_lst)))\n",
+    "#     frugal_proc = np.zeros((N_frugal, len(tau_lst), datasize))\n",
+    "#     for i in range(N_frugal):\n",
+    "#         frugal_res[i], frugal_proc[i] = get_q_ests(dataset, tau_vals, \"Frugal\", None)\n",
+    "#     q_est_res, q_est_proc = frugal_res, frugal_proc\n",
+    "#     E = get_normalized_e(q_batches, sgd_est_res, q_est_res)\n",
+    "\n",
+    "#     file_name = ('Distribution', distro)\n",
+    "\n",
+    "#     folder_name = \"Experiment_results/Frugal_SGD/distro/\"\n",
+    "\n",
+    "#     data_dict = {\n",
+    "#         'q_true': q_true,\n",
+    "#         'q_batches': q_batches,\n",
+    "#         'q_est_res': q_est_res,\n",
+    "#         'q_est_proc': q_est_proc,\n",
+    "#         'E': E,\n",
+    "#         'q_compare': sgd_res_proc,\n",
+    "#     }\n",
+    "\n",
+    "#     save_data(folder_name, file_name, tau_vals, data_dict, \"Frugal\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Experiment_results/Frugal_SGD/distro/gau_1_q_true.txt\n",
-      "Experiment_results/Frugal_SGD/distro/gau_1_q_batches.txt\n",
-      "Experiment_results/Frugal_SGD/distro/gau_1_q_est_res.txt\n",
-      "Experiment_results/Frugal_SGD/distro/gau_1_q_est_proc.txt\n",
-      "Experiment_results/Frugal_SGD/distro/gau_1_E.txt\n",
-      "Experiment_results/Frugal_SGD/distro/gau_1_q_compare.txt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# file_name = get_file_name(changed_setting, distro, datasize, stepsize, SHUFFLE)\n",
-    "file_name = ('Distribution', distro)\n",
-    "\n",
-    "folder_name = \"Experiment_results/Frugal_SGD/distro/\"\n",
-    "\n",
-    "data_dict = {\n",
-    "    'q_true': q_true,\n",
-    "    'q_batches': q_batches,\n",
-    "    'q_est_res': q_est_res,\n",
-    "    'q_est_proc': q_est_proc,\n",
-    "    'E': E,\n",
-    "    'q_compare': sgd_res_proc,\n",
-    "}\n",
-    "    \n",
-    "save_data(folder_name, file_name, tau_vals, data_dict, \"Frugal\")"
+    "# file_name = get_file_name(changed_setting, distro, datasize, stepsize, SHUFFLE)\n"
    ]
   },
   {
@@ -168,6 +138,14 @@
      "output_type": "stream",
      "text": [
       "Experiment_results/Frugal_SGD/distro/gau_1_\n",
+      "q label is  Frugal\n",
+      "q label is  Frugal\n",
+      "q label is  Frugal\n",
+      "Experiment_results/Frugal_SGD/distro/mix_\n",
+      "q label is  Frugal\n",
+      "q label is  Frugal\n",
+      "q label is  Frugal\n",
+      "Experiment_results/Frugal_SGD/distro/exp_\n",
       "q label is  Frugal\n",
       "q label is  Frugal\n",
       "q label is  Frugal\n"
@@ -209,6 +187,61 @@
     "        \n",
     "# sgd_frugal_compare(distros, 1000)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment_results/P2/distro/gau_1_\n",
+      "q label is  P2\n",
+      "q label is  P2\n",
+      "q label is  P2\n",
+      "Experiment_results/P2/distro/mix_\n",
+      "q label is  P2\n",
+      "q label is  P2\n",
+      "q label is  P2\n",
+      "Experiment_results/P2/distro/gau_2_\n",
+      "q label is  P2\n",
+      "q label is  P2\n",
+      "q label is  P2\n",
+      "Experiment_results/P2/distro/exp_\n",
+      "q label is  P2\n",
+      "q label is  P2\n",
+      "q label is  P2\n",
+      "Experiment_results/P2/data_size/100_\n",
+      "q label is  P2\n",
+      "q label is  P2\n",
+      "q label is  P2\n",
+      "Experiment_results/P2/data_size/10000_\n",
+      "q label is  P2\n",
+      "q label is  P2\n",
+      "q label is  P2\n",
+      "Experiment_results/P2/data_size/1000_\n",
+      "q label is  P2\n",
+      "q label is  P2\n",
+      "q label is  P2\n",
+      "Experiment_results/P2/data_sequence/shuffle_\n",
+      "q label is  P2\n",
+      "q label is  P2\n",
+      "q label is  P2\n"
+     ]
+    }
+   ],
+   "source": [
+    "plot_charts(\"Experiment_results/P2/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
