--- a/QuantEst/sgd_est_experiment/Experiment_final.ipynb
+++ b/QuantEst/sgd_est_experiment/Experiment_final.ipynb
@@ -179,7 +179,7 @@
    "outputs": [],
    "source": [
     "# Run all functions\n",
-    "Folder_options = ['SGD', 'Frugal', 'Adaptive', 'P2']\n",
+    "Folder_options = ['SGD', 'Frugal', 'Adaptive', 'P2',]\n",
     "main_folder = 'shiftQ'\n",
     "compare_lst = ['distro', 'data_size', 'data_sequence']\n",
     "\n",
@@ -199,7 +199,7 @@
     "\n",
     "initialize_folders(main_fd = 'Experiment_results/', fd_lst = [main_folder], \n",
     "                       sub_fd_lst = [str(main_folder)+'/'], subsub_fd_lst = ['data_size'])\n",
-    "# all_method_comparisons(['data_size'], args_dict_shift_Q, main_folder)"
+    "all_method_comparisons(['data_size'], args_dict_shift_Q, main_folder)"
    ]
   },
   {
