algo_equal, plots to be added

--- a/QuantEst/thesis/main.tex
+++ b/QuantEst/thesis/main.tex
@@ -96,9 +96,9 @@
 %----------------------------------------------------------------------------------------
 %	THESIS CONTENT - CHAPTERS
 %----------------------------------------------------------------------------------------
-\include{Chapters/Introduction}
-\include{Chapters/literature_review} % Chapter 1
-\include{Chapters/Background}
+% \include{Chapters/Introduction}
+% \include{Chapters/literature_review} % Chapter 1
+% \include{Chapters/Background}
 \include{Chapters/algorithm_equivalence}
 % \include{Chapters/sgd_experiment}
 % \include{Chapters/SAG}
