NeurPIS2020 submit final version.

--- a/Q_BAI/notebooks/Q_UGapEb_20arms-new_env_group_one_est_gap.ipynb
+++ b/Q_BAI/notebooks/Q_UGapEb_20arms-new_env_group_one_est_gap.ipynb
@@ -133,7 +133,7 @@
     "\n",
     "num_arms = 20\n",
     "num_exper = 100\n",
-    "budget = 1000\n",
+    "budget = 3000\n",
     "epsilon = 0\n",
     "m = 1\n",
     "hyperpara_list = [[1,1], [4, 1]]\n",
@@ -326,8 +326,8 @@
    "outputs": [],
    "source": [
     "\n",
-    "with open('Fixed_budget_20arms_new_env_group_one_est_gap.pickle', 'wb') as handle:\n",
-    "    pickle.dump(results, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
+    "#with open('Fixed_budget_20arms_new_env_group_one_est_gap.pickle', 'wb') as handle:\n",
+    "#    pickle.dump(results, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
     "#with open('Fixed_budget_20arms_new_env_group_one.pickle', 'rb') as handle:\n",
     "#     results = pickle.load(handle)\n"
    ]
@@ -378,7 +378,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
