--- a/QuantEst/thesis/FrontBackMatter/Contents.tex
+++ b/QuantEst/thesis/FrontBackMatter/Contents.tex
@@ -26,14 +26,14 @@
 %	List of Figures
 %----------------------------------------------------------------------------------------
     
-% \refstepcounter{dummy}
-% %\addcontentsline{toc}{chapter}{\listfigurename} % Uncomment if you would like the list of figures to appear in the table of contents
-% \pdfbookmark[1]{\listfigurename}{lof} % Bookmark name visible in a PDF viewer
+\refstepcounter{dummy}
+%\addcontentsline{toc}{chapter}{\listfigurename} % Uncomment if you would like the list of figures to appear in the table of contents
+\pdfbookmark[1]{\listfigurename}{lof} % Bookmark name visible in a PDF viewer
 
-% \listoffigures
+\listoffigures
 
-% \vspace{8ex}
-% \newpage
+\vspace{8ex}
+\newpage
 
 %----------------------------------------------------------------------------------------
 %	List of Tables
