--- a/QuantEst/thesis/FrontBackMatter/Titlepage.tex
+++ b/QuantEst/thesis/FrontBackMatter/Titlepage.tex
@@ -10,7 +10,7 @@
 \vfill
 
 \begingroup
-\color{Maroon}\spacedallcaps{Quantile estimation on streaming data} \\ \bigskip % Thesis title
+\color{Maroon}\spacedallcaps{Stochastic Gradient Descent (SGD) on Quantile Estimation} \\ \bigskip % Thesis title
 \endgroup
 
 \spacedlowsmallcaps{Yiping Su} % Your name
@@ -26,7 +26,7 @@ A study on something I don't quite understand yet \\ \bigskip \bigskip % Thesis 
 \myUni \\ 
 \bigskip \bigskip
 
-February 2020 -- \myVersion % Time and version
+\myTime -- \myVersion % Time and version
 
 \vfill
 
