--- a/QuantEst/thesis/classicthesis-config.tex
+++ b/QuantEst/thesis/classicthesis-config.tex
@@ -39,15 +39,15 @@
 \newcommand{\mySubtitle}{An Homage to The Elements of Typographic Style\xspace}
 \newcommand{\myDegree}{Bachelor of Information Technology (Honours)\xspace}
 \newcommand{\myName}{Yiping Su\xspace}
-\newcommand{\myProf}{dfafa \xspace}
+% \newcommand{\myProf}{Cheng Soon Ong \xspace}
 \newcommand{\myOtherProf}{Put name here\xspace}
 \newcommand{\mySupervisor}{Cheng Soon Ong\xspace}
 \newcommand{\myFaculty}{Put data here\xspace}
 \newcommand{\myDepartment}{College of Engineering and Computer Science\xspace}
 \newcommand{\myUni}{Australian National University\xspace}
 \newcommand{\myLocation}{Canberra\xspace}
-\newcommand{\myTime}{February 2020\xspace}
-\newcommand{\myVersion}{version 0.2\xspace}
+\newcommand{\myTime}{June 2020\xspace}
+\newcommand{\myVersion}{version 0.7\xspace}
 
 %----------------------------------------------------------------------------------------
 %	USEFUL COMMANDS
