--- a/QuantEst/thesis/main.tex
+++ b/QuantEst/thesis/main.tex
@@ -97,10 +97,9 @@
 %	THESIS CONTENT - CHAPTERS
 %----------------------------------------------------------------------------------------
 % \include{Chapters/Introduction}
-% \include{Chapters/literature_review} % Chapter 1
-% \include{Chapters/Background}
-\include{Chapters/algorithm_equivalence}
-% \include{Chapters/sgd_experiment}
+% \include{Chapters/literature_review} % Chapter 2
+% \include{Chapters/algorithm_equivalence}
+\include{Chapters/sgd_experiment}
 % \include{Chapters/SAG}
 % \include{Chapters/smooth_func}
 % \include{Chapters/Multi_quant}
